--- a/apps/dashboard/src/app/entities/entities.component.scss
+++ b/apps/dashboard/src/app/entities/entities.component.scss
@@ -5,62 +5,33 @@
   padding: 3.8vw var(--app-layout-margin-right);
 
   h1 {
-    margin: 0 0 24px 0;
-    font-size: var(--stf-font-size-title);
-    font-weight: var(--stf-font-weight-bold);
+    margin: 0 0 rhythm(3) 0;
   }
 
-  &-search {
-    width: 282px;
-    padding: 9px 14px 7px 14px;
-    background-color: #fff;
-
-    label {
-      margin-right: 5px;
-      font-weight: var(--stf-font-weight-light);
-    }
-
-    input {
-      position: relative;
-      top: 1px;
-      min-width: 0;
-      padding: 1px 3px;
-      border: 0;
-      border-bottom: 1px solid #000;
-      font-family: inherit;
-    }
-
-    button {
-      @include reset-button();
-      margin-left: 4px;
-      cursor: pointer;
-    }
-  }
-
-  &-no-results {
-    margin: 16px 0 0 14px;
-  }
-
-  &-download {
-    @include reset-button();
-    display: flex;
+  .entities-search {
     align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    background-color: #fff;
-    border-radius: 4px;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.16);
-    cursor: pointer;
-    svg {
-      display: block;
-      width: 20px;
+    background-color: $color-light-stronger;
+    display: flex;
+    gap: rhythm(1);
+    padding: rhythm(2) rhythm(1) rhythm(2) rhythm(2);
+    width: rhythm(40);
+
+    pa-input {
+      flex: 1 0 auto;
+
+      ::ng-deep .pa-field {
+        margin-bottom: 0;
+      }
     }
+  }
+
+  .entities-no-results {
+    margin: rhythm(2) 0 0 rhythm(2);
   }
 }
 
 .entity-table {
-  margin-top: 28px;
+  margin-top: rhythm(3);
 
   .cell-color {
     flex: $entity-table-color-flex;
@@ -83,9 +54,9 @@
 
   &-header {
     display: flex;
-    padding-bottom: 9px;
-    border-bottom: 1px solid #000;
-    font-weight: var(--stf-font-weight-bold);
+    padding-bottom: rhythm(1);
+    border-bottom: 1px solid $color-dark-stronger;
+    font-weight: $font-weight-bold;
 
     .cell-description {
       text-align: center;
