--- a/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.scss
@@ -30,17 +30,17 @@
   }
 
   .service-access-list {
-    border-top: 1px solid #000;
+    border-top: 1px solid $color-dark-stronger;
   }
 
   .service-access {
     border-bottom: 1px solid $color-neutral-light;
 
-    &-header {
+    .service-access-header {
       min-height: rhythm(4);
     }
 
-    &-title {
+    .service-access-title {
       button {
         @include reset-button();
         cursor: pointer;
@@ -49,27 +49,28 @@
         }
         text-align: left;
       }
-      &-arrow {
-        transition: transform 0.2s;
+      .service-access-title-arrow {
+        transition: transform $transition-response;
         &.expanded {
           transform: rotate(90deg);
-        }
-        svg {
-          display: block;
-          width: 14px;
-          height: auto;
         }
       }
     }
 
-    &-keys {
-      padding: 0 0 12px 18px;
+    .service-access-actions {
+      display: flex;
+      gap: rhythm(1);
     }
-    &-key {
-      width: 100%;
-      height: 28px;
+
+    .service-access-keys {
+      padding: 0 0 rhythm(1.5) rhythm(2);
+    }
+    .service-access-key {
+      height: rhythm(3);
       font-size: var(--stf-font-size-ssmall);
-      &-actions {
+      width: 100%;
+
+      .service-access-key-actions {
         text-align: right;
       }
     }
