--- a/apps/dashboard/src/app/upload/upload-progress/upload-progress.component.html
+++ b/apps/dashboard/src/app/upload/upload-progress/upload-progress.component.html
@@ -1,33 +1,32 @@
 <div class="upload-progress">
-  <button class="close-button" (click)="close.emit()">
-    <svg-icon src="assets/icons/close-modal.svg"></svg-icon>
-  </button>
   <h1 class="mb-20">{{ 'upload.uploading_queue' | translate }}</h1>
+  <pa-button class="close-button"
+             icon="cross"
+             aspect="basic"
+             (click)="close.emit()">{{'generic.close' | translate}}</pa-button>
 
   <div class="warning">
     <strong>{{ 'upload.takes_time' | translate }}</strong>
     <span> {{ 'upload.once_uploaded' | translate }}</span>
   </div>
-  <div class="upload-list" *ngIf="((progress | async)?.files || []).length > 0">
-    <div class="upload" *ngFor="let file of (progress | async)?.files || []">
+  <div class="upload-list" *ngIf="(files | async).length > 0">
+    <div class="upload" *ngFor="let file of files | async">
       <div class="file" [class.failed]="file.failed">
         <span class="file-name">{{ file.file.name }}</span>
         <span class="file-size"> - {{ file.file.size | size }}</span>
       </div>
       <div class="status">
-        <svg-icon src="assets/icons/check.svg" *ngIf="file.uploaded"></svg-icon>
-        <svg-icon
-          src="assets/icons/duplicate.svg"
-          *ngIf="file.conflicts"
-          stfTooltip
-          stfTooltipText="upload.duplicated"
-        ></svg-icon>
-        <svg-icon
-          src="assets/icons/cross.svg"
-          *ngIf="file.failed && !file.conflicts"
-          stfTooltip
-          stfTooltipText="upload.error"
-        ></svg-icon>
+        <pa-icon *ngIf="file.uploaded"
+                 name="check"
+                 size="small"></pa-icon>
+        <pa-icon *ngIf="file.conflicts"
+                 paTooltip="upload.duplicated"
+                 name="copy"
+                 size="small"></pa-icon>
+        <pa-icon *ngIf="file.failed && !file.conflicts"
+                 paTooltip="upload.error"
+                 name="cross"
+                 size="small"></pa-icon>
         <div class="progress-bar" *ngIf="file.progress !== 100">
           <div [style.width.%]="file.progress"></div>
         </div>
@@ -36,9 +35,9 @@
   </div>
 
   <div class="footer">
-    <div>{{ 'modal.upload.queue_length' | translate }}: {{ ((progress | async)?.files || []).length }}</div>
-    <stf-button (click)="close.emit()" color="gray" padding="pd-xl">
+    <div>{{ 'modal.upload.queue_length' | translate }}: {{ (files | async).length }}</div>
+    <pa-button (click)="close.emit()" kind="inverted">
       {{ 'generic.close' | translate }}
-    </stf-button>
+    </pa-button>
   </div>
 </div>
