--- a/apps/dashboard/src/app/widgets/widgets.component.html
+++ b/apps/dashboard/src/app/widgets/widgets.component.html
@@ -7,7 +7,7 @@
       {{ 'stash.widgets.add' | translate }}
     </pa-button>
     <div class="warning">
-      <svg-icon src="assets/icons/toast-warning.svg"></svg-icon>
+      <pa-icon name="warning"></pa-icon>
       <div>
         <span [innerHTML]="'stash.widgets.warning' | translate"></span>
         <ng-container *ngIf="showLink | async">
