--- a/apps/dashboard/src/app/setup/setup-step2/setup-step2.component.scss
+++ b/apps/dashboard/src/app/setup/setup-step2/setup-step2.component.scss
@@ -4,10 +4,10 @@
   display: flex;
   flex-direction: column;
   min-height: var(--setup-container-min-height);
-  padding: 60px 100px;
+  padding: rhythm(8) rhythm(12);
 
   &-title {
-    margin: 36px 0 40px 0;
+    margin: rhythm(4) 0 rhythm(5) 0;
     font-size: var(--stf-font-size-title);
     font-weight: var(--stf-font-weight-bold);
     text-align: center;
@@ -16,11 +16,11 @@
   &-account {
     input {
       font-family: inherit;
-      height: 40px;
-      padding: 0 12px;
+      height: rhythm(5);
+      padding: 0 rhythm(1.5);
       background-color: #fff;
       border: 1px solid #000;
-      border-radius: 5px;
+      border-radius: rhythm(0.5);
       &.empty {
         border-color: var(--stf-gray-lighter-3);
       }
@@ -31,36 +31,33 @@
   }
 
   &-success {
-    margin-top: 8px;
+    margin-top: rhythm(1);
     font-weight: var(--stf-font-weight-semibold);
-    svg {
-      display: block;
-      fill: var(--stf-primary);
-    }
+    color: $color-primary-regular;
   }
 
   &-error {
-    margin-top: 8px;
+    margin-top: rhythm(1);
     font-weight: var(--stf-font-weight-semibold);
     color: var(--stf-primary);
   }
 
   &-kb {
     margin-top: auto;
-    padding-top: 25px;
+    padding-top: rhythm(3);
 
     &-zone {
-      margin-bottom: 25px;
+      margin-bottom: rhythm(3);
     }
 
     &-info {
-      margin-bottom: 28px;
+      margin-bottom: rhythm(3);
       line-height: 1.3;
     }
     &-name {
       border-top: 1px solid var(--stf-gray-lighter-3);
       border-bottom: 1px solid var(--stf-gray-lighter-3);
-      padding: 16px 0;
+      padding: rhythm(2) 0;
       font-size: var(--stf-font-size-xlarge);
       input {
         font-family: inherit;
@@ -86,8 +83,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 18px;
-    height: 18px;
+    width: rhythm(2);
+    height: rhythm(2);
     border: 1px solid currentColor;
     border-radius: 50%;
     font-size: var(--stf-font-size-ssmall);
@@ -98,7 +95,7 @@
 
   &-actions {
     margin-top: auto;
-    padding-top: 30px;
+    padding-top: rhythm(4);
     text-align: center;
   }
 }
