--- a/libs/common/src/lib/user/profile/profile.component.scss
+++ b/libs/common/src/lib/user/profile/profile.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'libs/pastanaga/src/lib/styles/stf';
 
 .profile {
   padding: 10vh 0;
@@ -11,24 +11,31 @@
     background-color: #fff;
   }
 
-  .close-button {
-    top: rhythm(3);
-    right: rhythm(3);
+  &-close {
+    @include reset-button();
+    position: absolute;
+    top: 30px;
+    right: 26px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
   }
 
   form {
     display: flex;
     flex-direction: column;
     min-height: 80vh;
-    padding: rhythm(4) rhythm(6);
+    padding: 35px 48px;
   }
 
   h1 {
-    margin: rhythm(4) 0 rhythm(3) 0;
+    margin: 36px 0 28px 0;
+    font-size: var(--stf-font-size-title);
+    font-weight: var(--stf-font-weight-bold);
   }
 
   .field {
-    margin-bottom: rhythm(3);
+    margin-bottom: 24px;
     display: flex;
     align-items: center;
     &-label {
@@ -43,13 +50,13 @@
   }
 
   label {
-    padding-right: rhythm(2);
+    padding-right: 15px;
     font-weight: var(--stf-font-weight-semibold);
   }
 
   .actions {
     margin-top: auto;
-    padding-top: rhythm(6);
+    padding-top: 50px;
     text-align: center;
   }
 }
